# clip2audio

./: .gitignore  Dockerfile  README.md  docker-run.sh  pyproject.toml
.github/workflows/: main.yml  release.yml
clip2audio/: audio_extractor.py  config.py  main.py  tasks.py  utils.py
