[project]
name = "clip2audio"
version = "0.1.0"
description = ""
authors = [
    {name = "Felix C",email = "felix.capuano@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "luigi (>=3.6.0,<4.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "moviepy (>=2.2.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "clip2audio.__main__:main"